--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -8,7 +8,7 @@
     <tbody>
         <tr th:each="article : ${articleList}">
             <td>
-                <a th:href="@{/article/detail/{id}}" th:text="${article.title}"></a>
+                <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}"></a>
             </td>
             <td th:text="${article.content}"></td>
         </tr>
